# python-wayback-machine-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md
.github/workflows/: build.yml  pypi.yml  stale.yml
dev/: pip_build.sh  venv_create.sh
hooks/: hook-magic.py
pywaybackup/: Arguments.py  Converter.py  Exception.py  PyWayBackup.py  PyWaybackup.py  Snapshot.py  SnapshotCollection copy.py  SnapshotCollection.py  SnapshotCollection2.py  SnapshotCollection3.py  Verbosity.py  Worker.py  __init__.py  __version__.py  archive.py  archive_download.py  archive_save.py  arg_parser.py  arg_specs.py  arguments.py  cdxfile.py  db.py  files.py  helper.py  interactive.py  main.py
test/: Converter.py  cdx.example.com  cdx.example.com.200  cdx.example.com.404  cdx.example.com.small.200  test_links.js
test/docker/: build.sh  dockerfile  start.sh
