[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["pywaybackup"]


[project]
dependencies = [
    "ruff",
    "SQLAlchemy==2.0.43",
    "requests==2.32.3",
    "tqdm==4.67.1",
    "pylibmagic==0.5.0",
    "python-magic==0.4.27; sys_platform == 'linux'",
    "python-magic-bin==0.4.14; sys_platform == 'win32' or sys_platform == 'darwin'",
]
name = "pywaybackup"
version = "4.1.4"
description = "Query and download archive.org as simple as possible."
authors = [{ name = "bitdruid", email = "bitdruid@outlook.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"


[project.scripts]
waybackup = "pywaybackup.main:cli"


[project.urls]
homepage = "https://github.com/bitdruid/python-wayback-machine-downloader"


[tool.ruff]
line-length = 120
exclude = ["pywaybackup/Arguments.py"]
